config file added

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Iris Species Predictor</h1>
-    <form action="/predict" method="POST">
+    <form action="/predict" method="post">
       <label for="sepal_length">Sepal Length:</label>
       <input type="text" id="sepal_length" name="sepal_length"><br><br>
       
